# flux-coop-runtime

./: CHARTER.md  DOCKSIDE-EXAM.md  PHASE-1-SPEC.md  README.md  SCHEMA.md  VERSION.json  pyproject.toml
examples/: end_to_end_demo.py
for-fleet/: health-check-2026-04-12_171718.json
src/: cooperative_types.py  fleet_compat.py  runtime.py
src/coop_runtime/: capability_negotiation.py
src/discovery/: __init__.py  resolver.py
src/discovery/tests/: test_resolver.py
src/evolution/: protocol_evolution.py
src/evolution/tests/: test_protocol_evolution.py
src/failure/: recovery.py
src/synthesis/: conflict_resolver.py
src/synthesis/tests/: test_conflict_resolver.py
src/transfer/: __init__.py  format.py
src/transfer/tests/: test_format.py
src/transport/: __init__.py  git_transport.py
src/transport/tests/: test_git_transport.py
src/trust/: __init__.py  scorer.py
src/trust/tests/: test_scorer.py
tests/: test_capability_negotiation.py  test_comprehensive.py  test_cooperative_types.py  test_failure_recovery.py  test_multi_agent.py  test_phase1.py  test_runtime.py
